0.02
 - Add get_lines() method to doc.
 - Remove executable bit from tbilisi-map.xml file.
 - Update copyright years to 2015.

0.01 2014-12-14T13:43:37+01:00
 - First version