@@ -9,6 +9,7 @@ SYNOPSIS
      my $station = $obj->get_node_by_id($station_id);
      my $station = $obj->get_node_by_name($station_name);
      my $route = $obj->get_shortest_route($from, $to);
+     my $stations_ar = $obj->get_stations($line);
      my $metro_name = $obj->name;
      my $xml_file = $obj->xml;
 
@@ -46,6 +47,10 @@ METHODS
     "name()"
              Get metro name.
              Returns string with metro name.
+
+    "get_stations($line)"
+             Get list of stations for concrete metro line.
+             Returns reference to array with Map::Tube::Node objects.
 
     "xml()"
              Get XML specification of Tbilisi metro.
